update for local debug

--- a/templates/tagging.html
+++ b/templates/tagging.html
@@ -15,7 +15,7 @@
 
         <!-- js -->
         <!-- jQuery -->
-        <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="../static/js/jquery.min.js"></script>
         <script src="../static/js/web.js"></script>
 
     </head>
